<resources>

    <string name="shopping_lists_title">Lists</string>
    <string name="shopping_lists_empty_title">You have no lists</string>
    <string name="shopping_lists_empty_info">Let\'s change that by tapping the create list button</string>

    <plurals name="shopping_list_items_total">
        <item quantity="one">%d item total</item>
        <item quantity="other">%d items total</item>
    </plurals>

    <plurals name="shopping_list_items_checked">
        <item quantity="one">%d checked</item>
        <item quantity="other">%d checked</item>
    </plurals>

    <string name="create_list_title">Create List</string>
    <string name="edit_list_title">Edit List</string>

    <string name="list_name_hint">List name</string>
    <string name="create_list_button">Create</string>
    <string name="save_list_button">Save</string>
    <string name="add_list_item_hint">Article name</string>
    <string name="edit_item_button_desc">Edit item</string>
    <string name="shopping_list_name_error">The list needs a name</string>
    <string name="checked_items_group">Checked items</string>

    <string name="list_deleted_snackbar">List deleted</string>

    <string name="shopping_list_empty_title">This list is empty</string>
    <string name="shopping_list_empty_info">Tap the yellow button to add items</string>

    <string name="action_menu_edit_list">Edit list</string>
    <string name="action_menu_delete_list">Delete list</string>

    <string name="action_menu_check_all_items">Check all items</string>
    <string name="action_menu_uncheck_all_items">Uncheck all items</string>
    <string name="action_menu_remove_checked_items">Remove checked items</string>
    <string name="action_menu_remove_all_items">Remove all items</string>

    <string name="fab_create_shopping_list">Create List</string>
    <string name="fab_add_list_item">Add Item</string>
    <string name="options_menu_button_desc">Options menu button</string>
    <string name="color_selector_item_desc">Color selector item</string>
    <string name="restore_button">Restore</string>
    <string name="existing_list_item_icon_desc">Article is in list icon</string>
    <string name="existing_article_icon_desc">Article is not in list icon</string>
    <string name="create_new_article_icon_desc">Create new article icon</string>
    <string name="list_lead_image_desc">Icon that symbolises an empty list</string>
    <string name="lists_lead_image_desc">Icon that symbolises a shopping list</string>

</resources>
