...
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                app:layout_constraintVertical_bias="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:singleLine="true"/>
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                app:layout_constraintBottom_toTopOf="@id/createButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createButton"
                style="@style/Widget.Basket.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
