...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/itemsTotalTextView"
            tools:text="0 checked"/>

        <ImageButton
            android:id="@+id/moreButton"
            style="@style/Widget.Basket.IconButton"
            android:contentDescription="@string/options_menu_button_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert_24"
            app:tint="?attr/colorOnPrimary"/>
...
