...
        android:layout_marginBottom="?attr/actionBarSize"
        android:tag="@string/tag_nav_host_fragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_24"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="center_horizontal"/>

...
